FIX: Ensure text doesn't encroach on visibility buttons.

--- a/css/via-portal-manager.css
+++ b/css/via-portal-manager.css
@@ -1,29 +1,9 @@
-.clearfix {
-    clear: both;
-    content: "";
-}
-.vpm-hidden {
-    display: none;
-}
-.vpm-toggle-link {
-/*    font-size: 9px;
-    color: gray;
-    text-decoration: initial;
-    font-weight: initial;
-    box-shadow: none;
-    */
-}
-.vpm-video-show {
-    margin: 50px auto;
-}
-span.vpm-header-text {
-    font-size: 1.1em;
-}
+.clearfix { overflow: auto; }
+.vpm-hidden { display: none; }
+.vpm-video-show { margin: 50px auto; }
+span.vpm-header-text { font-size: 1.1em; }
 .vpm-show-videos {
     width: 100%;
-/*    width: 80%;
-    max-width: 640px;
-    */
     margin: 20px auto;
     padding-bottom: 20px;
 }
@@ -44,26 +24,16 @@ span.vpm-header-text {
     color: #b3b3b3;
     text-decoration: none;
 }
-.vpm-show-videos a {
-    float: left;
-}
-.vpm-show-videos a:last-child {
-    float: right;
-}
+.vpm-show-videos a { float: left; }
+.vpm-show-videos a:last-child { float: right; }
 /* Make video shortcode embeds responsive */
 .wp-video, video.wp-video-shortcode, .mejs-container, .mejs-overlay.load {
     width: 100% !important;
     height: 100% !important;
 }
-.mejs-container {
-    padding-top: 56.25%;
-}
-.wp-video, video.wp-video-shortcode {
-    max-width: 100% !important;
-}
-video.wp-video-shortcode {
-    position: relative;
-}
+.mejs-container { padding-top: 56.25%; }
+.wp-video, video.wp-video-shortcode { max-width: 100% !important; }
+video.wp-video-shortcode { position: relative; }
 .mejs-mediaelement {
     position: absolute;
     top: 0;
@@ -71,9 +41,7 @@ video.wp-video-shortcode {
     bottom: 0;
     left: 0;
 }
-.mejs-controls {
-    display: none;
-}
+.mejs-controls { display: none; }
 .mejs-overlay-play {
     top: 0;
     right: 0;
@@ -82,9 +50,7 @@ video.wp-video-shortcode {
     width: auto !important;
     height: auto !important;
 }
-.vpm-link a {
-    font-weight: initial;
-}
+.vpm-link a { font-weight: initial; }
 div.vpm-separator {
     width: 98%;
     margin: 10px auto;
@@ -94,7 +60,6 @@ div.vpm-separator {
 div.vpm-table div.vpm-separator {
     width: 100%;
     background-color: #fff;
-
 }
 /* Table definition (using DIVs) */
 div.vpm-table {
